# htr-catmus-french-2026

./: .gitignore  CLAUDE.md  CONVENTIONS_TRANSCRIPTION.md  DATA_SOURCES.md  MODEL_CARD.md  README.md  pyproject.toml
dataset_nlp/: transcriptions_test.json
docs/: 00_ATTAQUER_LE_PROJET.md  01_repartition_roles.md  02_plan_article.md  PROMPTS_CLAUDE_CODE.md
experiments/: final_results.json  journal.jsonl  test_set_seal.json
notebooks/: notebook_baseline_catmus.ipynb
src/data/: __init__.py
src/evaluation/: __init__.py
src/htr/: __init__.py
src/preprocessing/: __init__.py
src/segmentation/: __init__.py
tests/: test_smoke.py
volet2/dataset/: enriched_transcriptions.json
volet2/results/: entities_for_review.csv  knowledge_graph.json
