[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "htr-catmus-french-2026"
version = "0.1.0"
description = "HTR pipeline for medieval French manuscripts (Old/Middle French, XIII-XV) trained on CATMuS Medieval"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Équipe MD5 HETIC", email = "to-fill@example.org" }
]

# Dépendances fixées : à mettre à jour à chaque ajout, avec versions exactes
dependencies = [
  # Core ML
  "torch==2.2.2",
  "torchvision==0.17.2",
  "transformers==4.40.1",
  "peft==0.10.0",
  "accelerate==0.29.3",
  "datasets==2.19.0",
  "huggingface_hub==0.23.0",

  # HTR / paléographie
  # NB : kraken peut être délicat à installer ; à activer une fois la baseline TrOCR fonctionnelle
  # "kraken==5.2.9",

  # Vision
  "opencv-python==4.9.0.80",
  "scikit-image==0.23.2",
  "Pillow==10.3.0",
  "segmentation-models-pytorch==0.3.3",

  # Métriques et utilitaires
  "editdistance==0.8.1",
  "jiwer==3.0.4",
  "evaluate==0.4.2",
  "numpy==1.26.4",
  "pandas==2.2.2",
  "scipy==1.13.0",

  # Schéma JSON
  "jsonschema==4.22.0",
  "pydantic==2.7.1",

  # Logging / configuration
  "tqdm==4.66.4",
  "python-dotenv==1.0.1",
  "pyyaml==6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.0",
  "pytest-cov==5.0.0",
  "ruff==0.4.4",
  "black==24.4.2",
  "mypy==1.10.0",
  "ipykernel==6.29.4",
  "jupyter==1.0.0",
  "matplotlib==3.8.4",
  "seaborn==0.13.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
  "slow: marks tests as slow (skip with '-m \"not slow\"')",
  "gpu: marks tests requiring a GPU",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]  # géré par line-length

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
